fix(specs): increase MaxPermSize